# forecasting-energy-demand-with-ibm-granite-tinytimemixer

./: Energy Demand forecasting using Ercot data with interactive plot.ipynb  Energy Demand forecasting using Ercot data with interactive plot.py  README.md  article.md  config.yaml  eia_granite_ttm_march_fixed.py  energy_demand_forecasting_sarima_nbeats.ipynb  energy_demand_forecasting_sarima_nbeats.py  main.py  pyproject.toml
_drafts/: eia_granite_ttm_march_fixed.py
src/: core.py
